@@ -583,15 +583,6 @@ sub start
     push(@commands, map { my $r = $_->{'rule'};
                           pf($r) if $enabledRules{$r} } @sortedRules);
 
-    # Special rule for PPPoE interfaces to avoid problems with large packets
-    foreach my $if (@{$self->{net}->pppIfaces()}) {
-        $if = $self->{net}->realIface($if);
-        push(@commands,
-                pf("-t mangle -A POSTROUTING -o $if -p tcp -m tcp " .
-                   "--tcp-flags SYN,RST SYN -j TCPMSS --clamp-mss-to-pmtu")
-            );
-    }
-
     root(@commands);
 }
 
