@@ -1,4 +1,5 @@
 HEAD
+	+ PPPOE MTU is now changed when reconfiguring gateways
 	+ Set default order for dashboard widgets
 2.0.6
 	+ WAN Failover now supports DHCP and PPPoE interfaces
