@@ -1,3 +1,5 @@
+HEAD
+	+ PPPOE MTU is now changed in network module when reconfiguring gateways
 1.5.6
 	+ Zentyal rebrand
 1.5.5
